# pdf-renamer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pdf-renamer.spec  pyproject.toml  requirements.txt
.github/workflows/: build-binaries.yml
src/pdf_renamer/: __init__.py  __main__.py  cli.py  config.py  file_collector.py  log_silencer.py  logger.py  main.py  pdf_utils.py  renamer.py  stats.py
src/pdf_renamer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/functional/: test_cli.py
tests/integration/: test_renamer.py
tests/unit/: test_cache.py  test_pdf_utils.py
