[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-renamer"
version = "1.3.0"
description = "AI-powered PDF document classification and automatic renaming using vision-language models"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Wing Wong", email = "wongwsme@gmail.com" }]
keywords = [
	"pdf",
	"document-management",
	"automation",
	"ai",
	"vision-model",
	"document-classification",
]
classifiers = [
	"Development Status :: 4 - Beta",
	"Intended Audience :: End Users/Desktop",
	"Intended Audience :: Developers",
	"License :: OSI Approved :: MIT License",
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Programming Language :: Python :: 3.10",
	"Programming Language :: Python :: 3.11",
	"Programming Language :: Python :: 3.12",
	"Programming Language :: Python :: 3.13",
	"Topic :: Office/Business",
	"Topic :: Utilities",
	"Operating System :: MacOS",
	"Operating System :: POSIX :: Linux",
	"Operating System :: Microsoft :: Windows",
]
requires-python = ">=3.13"
dependencies = ["Pillow>=10.0.0", "pdf2image>=1.16.3", "huggingface-hub>=0.23.0", "llama-cpp-python>=0.3.16"]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.10.0"
]

[project.urls]
Homepage = "https://github.com/wongws11/pdf-renamer"
Documentation = "https://github.com/wongws11/pdf-renamer#readme"
Repository = "https://github.com/wongws11/pdf-renamer.git"
"Bug Tracker" = "https://github.com/wongws11/pdf-renamer/issues"

[project.scripts]
pdf-renamer = "pdf_renamer.cli:main"

[tool.setuptools]
packages = ["pdf_renamer"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = "black"
line_length = 88

[tool.pylint]
max-line-length = 88
